Fix SHOW CREATE VIEW to handle ANSI_QUOTES mode. (Bug #6903)

mysql-test/r/sql_mode.result:
  Update results
mysql-test/r/view.result:
  Update results
mysql-test/t/sql_mode.test:
  Add new regression tests
sql/sql_show.cc:
  Fix SHOW CREATE VIEW to honor ANSI_QUOTES mode.